--- a/css/style.css
+++ b/css/style.css
@@ -152,13 +152,13 @@ sup {
 }
 
 a {
-  color: #D19C97;
+  color: #ffc107;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #ba6a62;
+  color: #ffc107;
   text-decoration: underline;
 }
 
@@ -9477,7 +9477,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-  color: #D19C97;
+  color: #ffc107;
 }
 
 @media (max-width: 991.98px) {
